fix: names truncated (#190)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -115,6 +115,8 @@
       margin: 0;
       overflow: hidden;
       font-size: var(--md-font-size);
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 }
