--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -287,6 +287,7 @@
         margin-bottom: 0;
         overflow: hidden;
         line-height: var(--large-font-size);
+        white-space: nowrap;
         text-overflow: ellipsis;
       }
 
